# trackerkit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TECH_ROADMAP.md  THIRD_PARTY_LICENSES.md  pyproject.toml  pyrightconfig.json
docs/: auth.md  projects.md  relations.md  tasks.md
examples/: _base.py  _env.py  asana_example.py  jira_example.py  yandex_example.py
src/depensee_tracker_client/: __init__.py  tracker_client.py
src/depensee_tracker_client/contracts/: __init__.py  auth.py  comments.py  connection.py  projects.py  relations.py  task_tracker_client.py  tasks.py  users.py
src/depensee_tracker_client/domain/: __init__.py  enums.py  errors.py  models.py  relation_mapping.py
src/depensee_tracker_client/factory/: __init__.py  client_factory.py
src/depensee_tracker_client/providers/: __init__.py  base.py
src/depensee_tracker_client/providers/asana/: __init__.py  client.py  errors.py  mappers.py  queries.py  transport.py
src/depensee_tracker_client/providers/jira/: __init__.py  client.py  errors.py  mappers.py  queries.py  relations.py  transport.py
src/depensee_tracker_client/providers/yandex_tracker/: __init__.py  client.py  errors.py  mappers.py  queries.py  relations.py  transport.py
src/trackerkit/: __init__.py  tracker_client.py
src/trackerkit/contracts/: __init__.py  auth.py  comments.py  connection.py  projects.py  relations.py  task_tracker_client.py  tasks.py  users.py
src/trackerkit/domain/: __init__.py  enums.py  errors.py  models.py  relation_mapping.py
src/trackerkit/factory/: __init__.py  client_factory.py
src/trackerkit/providers/: __init__.py  base.py
src/trackerkit/providers/asana/: __init__.py  client.py  errors.py  mappers.py  queries.py  transport.py
src/trackerkit/providers/jira/: __init__.py  client.py  errors.py  mappers.py  queries.py  relations.py  transport.py
src/trackerkit/providers/yandex_tracker/: __init__.py  client.py  errors.py  mappers.py  queries.py  relations.py  transport.py
tests/: __init__.py  conftest.py  test_tracker_client.py
tests/domain/: test_error_kinds.py  test_relation_mapping.py
tests/factory/: test_client_factory.py
tests/providers/jira/: test_mappers.py  test_queries.py  test_relations.py
tests/providers/yandex_tracker/: test_mappers.py  test_queries.py  test_relations.py
