[tool.poetry]
name = "trackerkit"
version = "0.1.0"
description = "Unified async client library for Jira, Yandex Tracker, and Asana integrations."
authors = ["Mikhail Stasyshin <m.stasyshin@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stasyshin/trackerkit"
repository = "https://github.com/stasyshin/trackerkit"
documentation = "https://github.com/stasyshin/trackerkit#readme"
keywords = ["jira", "yandex-tracker", "asana", "task-tracker", "async", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "trackerkit", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
jira = "^3.10.5"
yandex-tracker-client = "^2.10"
asana = "^5.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # long lines: prefer formatter over hard wraps
    "UP042",  # `(str, Enum)` is intentional; StrEnum changes repr/hash semantics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

